--- a/pages/tools/index.scss
+++ b/pages/tools/index.scss
@@ -74,7 +74,7 @@ $tools-page-breakpoint: 782px;
 				inset: 0;
 				background-color: rgba(0, 0, 0, 0.4);
 				backdrop-filter: blur(3px);
-				z-index: 1000;
+				z-index: 99999;
 			}
 		}
 
@@ -103,7 +103,7 @@ $tools-page-breakpoint: 782px;
 
 				@media (max-width: $tools-page-breakpoint) {
 					position: fixed;
-					top: 46px;
+					top: 0;
 					left: 0;
 					width: 270px;
 					height: 100vh;
@@ -113,7 +113,7 @@ $tools-page-breakpoint: 782px;
 					transform: translateX(-100%);
 					overflow: auto;
 					transition: transform 0.3s ease-in-out;
-					z-index: 1001;
+					z-index: 99999;
 
 					&.open {
 						transform: translateX(0);
